Create swagger for login
