# api/openapi/model/public_key_credential_assertion_response.go
@@ -1,0 +1,281 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package model
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"bytes"
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PublicKeyCredentialAssertionResponse WebAuthn API response to a navigator.credentials.get() call
+//
+// swagger:model PublicKeyCredentialAssertionResponse
+type PublicKeyCredentialAssertionResponse struct {
+
+	// id
+	// Example: _18q6IjW09tiM4NSbsZjocUtGx00Muv5mN6LZCelCMDD...
+	ID string `json:"id,omitempty"`
+
+	// raw Id
+	// Example: _18q6IjW09tiM4NSbsZjocUtGx00Muv5mN6LZCelCMDD...
+	RawID string `json:"rawId,omitempty"`
+
+	// response
+	Response *PublicKeyCredentialAssertionResponseResponse `json:"response,omitempty"`
+
+	// type
+	// Example: public-key
+	// Enum: [public-key]
+	Type string `json:"type,omitempty"`
+}
+
+// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
+func (m *PublicKeyCredentialAssertionResponse) UnmarshalJSON(data []byte) error {
+	var props struct {
+
+		// id
+		// Example: _18q6IjW09tiM4NSbsZjocUtGx00Muv5mN6LZCelCMDD...
+		ID string `json:"id,omitempty"`
+
+		// raw Id
+		// Example: _18q6IjW09tiM4NSbsZjocUtGx00Muv5mN6LZCelCMDD...
+		RawID string `json:"rawId,omitempty"`
+
+		// response
+		Response *PublicKeyCredentialAssertionResponseResponse `json:"response,omitempty"`
+
+		// type
+		// Example: public-key
+		// Enum: [public-key]
+		Type string `json:"type,omitempty"`
+	}
+
+	dec := json.NewDecoder(bytes.NewReader(data))
+	dec.DisallowUnknownFields()
+	if err := dec.Decode(&props); err != nil {
+		return err
+	}
+
+	m.ID = props.ID
+	m.RawID = props.RawID
+	m.Response = props.Response
+	m.Type = props.Type
+	return nil
+}
+
+// Validate validates this public key credential assertion response
+func (m *PublicKeyCredentialAssertionResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateResponse(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PublicKeyCredentialAssertionResponse) validateResponse(formats strfmt.Registry) error {
+	if swag.IsZero(m.Response) { // not required
+		return nil
+	}
+
+	if m.Response != nil {
+		if err := m.Response.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("response")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("response")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+var publicKeyCredentialAssertionResponseTypeTypePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["public-key"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		publicKeyCredentialAssertionResponseTypeTypePropEnum = append(publicKeyCredentialAssertionResponseTypeTypePropEnum, v)
+	}
+}
+
+const (
+
+	// PublicKeyCredentialAssertionResponseTypePublicDashKey captures enum value "public-key"
+	PublicKeyCredentialAssertionResponseTypePublicDashKey string = "public-key"
+)
+
+// prop value enum
+func (m *PublicKeyCredentialAssertionResponse) validateTypeEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, publicKeyCredentialAssertionResponseTypeTypePropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *PublicKeyCredentialAssertionResponse) validateType(formats strfmt.Registry) error {
+	if swag.IsZero(m.Type) { // not required
+		return nil
+	}
+
+	// value enum
+	if err := m.validateTypeEnum("type", "body", m.Type); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this public key credential assertion response based on the context it is used
+func (m *PublicKeyCredentialAssertionResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateResponse(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PublicKeyCredentialAssertionResponse) contextValidateResponse(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Response != nil {
+		if err := m.Response.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("response")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("response")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PublicKeyCredentialAssertionResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PublicKeyCredentialAssertionResponse) UnmarshalBinary(b []byte) error {
+	var res PublicKeyCredentialAssertionResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// PublicKeyCredentialAssertionResponseResponse public key credential assertion response response
+//
+// swagger:model PublicKeyCredentialAssertionResponseResponse
+type PublicKeyCredentialAssertionResponseResponse struct {
+
+	// authenticator data
+	// Example: SZYN5YgOjGh0NBcPZHZgW4_krrmihjLHmVzzuoMdl2MF...
+	AuthenticatorData string `json:"authenticatorData,omitempty"`
+
+	// client data Json
+	// Example: eyJ0eXBlIjoid2ViYXV0aG4uZ2V0IiwiY2hhbGxlbmdl...
+	ClientDataJSON string `json:"clientDataJson,omitempty"`
+
+	// signature
+	// Example: MEQCIHe2RXqh6dyZw1LNXgeTTxljCV_qK2ydQjp02CiF...
+	Signature string `json:"signature,omitempty"`
+
+	// user handle
+	// Example: rpe_EkgaSEeZG0TwzZyZJw
+	UserHandle string `json:"userHandle,omitempty"`
+}
+
+// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
+func (m *PublicKeyCredentialAssertionResponseResponse) UnmarshalJSON(data []byte) error {
+	var props struct {
+
+		// authenticator data
+		// Example: SZYN5YgOjGh0NBcPZHZgW4_krrmihjLHmVzzuoMdl2MF...
+		AuthenticatorData string `json:"authenticatorData,omitempty"`
+
+		// client data Json
+		// Example: eyJ0eXBlIjoid2ViYXV0aG4uZ2V0IiwiY2hhbGxlbmdl...
+		ClientDataJSON string `json:"clientDataJson,omitempty"`
+
+		// signature
+		// Example: MEQCIHe2RXqh6dyZw1LNXgeTTxljCV_qK2ydQjp02CiF...
+		Signature string `json:"signature,omitempty"`
+
+		// user handle
+		// Example: rpe_EkgaSEeZG0TwzZyZJw
+		UserHandle string `json:"userHandle,omitempty"`
+	}
+
+	dec := json.NewDecoder(bytes.NewReader(data))
+	dec.DisallowUnknownFields()
+	if err := dec.Decode(&props); err != nil {
+		return err
+	}
+
+	m.AuthenticatorData = props.AuthenticatorData
+	m.ClientDataJSON = props.ClientDataJSON
+	m.Signature = props.Signature
+	m.UserHandle = props.UserHandle
+	return nil
+}
+
+// Validate validates this public key credential assertion response response
+func (m *PublicKeyCredentialAssertionResponseResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this public key credential assertion response response based on context it is used
+func (m *PublicKeyCredentialAssertionResponseResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PublicKeyCredentialAssertionResponseResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PublicKeyCredentialAssertionResponseResponse) UnmarshalBinary(b []byte) error {
+	var res PublicKeyCredentialAssertionResponseResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
